--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^5.1.1",
-    "@actions/tool-cache": "^2.0.1",
+    "@actions/cache": "^3.2.4",
     "fetch-retry": "^5.0.6",
     "got": "^14.2.1",
     "string-argv": "^0.3.2",
