--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write '**/*.ts'",
+    "format": "prettier --write .",
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --license licenses.txt",
     "all": "npm run build && npm run format && npm run lint && npm run package"
@@ -24,16 +24,17 @@
   },
   "homepage": "https://github.com/DeterminateSystems/idslib#readme",
   "dependencies": {
+    "@actions/cache": "^3.2.4",
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^5.1.1",
-    "@actions/cache": "^3.2.4",
     "fetch-retry": "^5.0.6",
     "got": "^14.2.1",
     "string-argv": "^0.3.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^18.16.3",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
