--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "idslib",
+  "name": "detsys-ts",
   "version": "1.0.0",
   "description": "An interface to install.determinate.systems.",
   "main": "./lib/main.js",
@@ -14,15 +14,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DeterminateSystems/idslib.git"
+    "url": "git+https://github.com/DeterminateSystems/detsys-ts.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/DeterminateSystems/idslib/issues"
+    "url": "https://github.com/DeterminateSystems/detsys-ts/issues"
   },
-  "homepage": "https://github.com/DeterminateSystems/idslib#readme",
+  "homepage": "https://github.com/DeterminateSystems/detsys-ts#readme",
   "dependencies": {
     "@actions/cache": "^3.2.4",
     "@actions/core": "^1.10.0",
