--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write '**/*.ts'",
+    "format": "prettier --write .",
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --license licenses.txt",
     "all": "npm run build && npm run format && npm run lint && npm run package"
