--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "idslib",
+  "name": "detsys-ts",
   "version": "1.0.0",
-  "description": "An interface to install.determinate.systems.",
+  "description": "TypeScript goodies for DetSys projects",
   "main": "./lib/main.js",
   "types": "./lib/main.d.ts",
   "type": "module",
@@ -14,26 +14,27 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DeterminateSystems/idslib.git"
+    "url": "git+https://github.com/DeterminateSystems/detsys-ts.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/DeterminateSystems/idslib/issues"
+    "url": "https://github.com/DeterminateSystems/detsys-ts/issues"
   },
-  "homepage": "https://github.com/DeterminateSystems/idslib#readme",
+  "homepage": "https://github.com/DeterminateSystems/detsys-ts#readme",
   "dependencies": {
+    "@actions/cache": "^3.2.4",
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^5.1.1",
-    "@actions/cache": "^3.2.4",
     "fetch-retry": "^5.0.6",
     "got": "^14.2.1",
     "string-argv": "^0.3.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^18.16.3",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
