--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,12 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-      - run: npm install --no-save
-      - run: npm run all
+      - uses: DeterminateSystems/nix-installer-action@main
+        with:
+          flakehub: true
+      - uses: DeterminateSystems/magic-nix-cache-action-priv@main
+      - run: nix develop --command pnpm install
+      - run: nix develop --command pnpm run all
       - run: git status --porcelain=v1
       - run: test $(git status --porcelain=v1 2>/dev/null | wc -l) -eq 0
   self:
@@ -21,4 +25,3 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.
-     
