--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc",
     "format": "prettier --write '**/*.ts'",
     "lint": "eslint src/**/*.ts",
+    "prebuild": "cp package.json ./src/package.json",
     "package": "ncc build --license licenses.txt",
     "all": "npm run build && npm run format && npm run lint && npm run package"
   },
