--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@vercel/ncc": "^0.36.1",
     "eslint": "^8.57.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-github": "^4.3.6",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.0.0-alpha.1",
