--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsup",
     "format": "prettier --write .",
-    "lint": "eslint src/**/*.ts",
+    "lint": "pnpm run prebuild && eslint src/**/*.ts",
     "prebuild": "cp package.json ./src/package.json",
     "all": "pnpm run format && pnpm run lint && pnpm run build"
   },
