--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "detsys-ts",
   "version": "1.0.0",
   "description": "TypeScript goodies for DetSys projects",
-  "main": "./dist/main.cjs",
-  "types": "./dist/main.d.cts",
+  "main": "./dist/main.js",
+  "types": "./dist/main.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsup",
+    "build": "tsc",
     "check-fmt": "prettier --check .",
     "format": "prettier --write .",
     "lint": "eslint src/**/*.ts",
@@ -45,7 +45,6 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.0.0-alpha.1",
     "prettier": "^3.0.0",
-    "tsup": "^8.0.2",
     "typescript": "^5.1.6"
   }
 }
