--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write .",
     "lint": "eslint src/**/*.ts",
     "prebuild": "cp package.json ./src/package.json",
+    "docs": "typedoc src/main.ts",
     "all": "pnpm run format && pnpm run prebuild && pnpm run lint && pnpm run build"
   },
   "repository": {
@@ -45,6 +46,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
+    "typedoc": "^0.25.13",
     "typescript": "^5.4.5"
   }
 }
