--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "check-fmt": "prettier --check .",
     "format": "prettier --write .",
     "lint": "eslint src/**/*.ts",
-    "prebuild": "cp package.json ./src/package.json",
+    "prebuild": "echo 'export const pkg =' > src/package.ts; cat package.json >> ./src/package.ts && prettier --write ./src/package.ts && eslint --fix ./src/package.ts",
     "docs": "pnpm run prebuild && typedoc src/main.ts",
-    "all": "pnpm run format && pnpm run prebuild && pnpm run lint && pnpm run build"
+    "all": "pnpm run prebuild && pnpm run format && pnpm run lint && pnpm run build"
   },
   "repository": {
     "type": "git",
