--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/DeterminateSystems/detsys-ts/issues"
   },
@@ -28,11 +28,7 @@
   "dependencies": {
     "@actions/cache": "^3.2.4",
     "@actions/core": "^1.10.1",
-    "@actions/exec": "^1.1.1",
-    "@actions/github": "^5.1.1",
-    "fetch-retry": "^5.0.6",
-    "got": "^14.2.1",
-    "string-argv": "^0.3.2"
+    "got": "^14.2.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
