Fix eslint variable shadowing issue

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,11 @@
   "rules": {
     "i18n-text/no-en": "off",
     "eslint-comments/no-use": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      { "json": "always", "ts": "never" }
+    ],
     "import/no-namespace": "off",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": [
