--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "linux-release-info": "^3.0.0",
     "prettier": "^3.2.5",
+    "tsup": "^8.0.2",
     "typedoc": "^0.25.13",
     "typescript": "^5.4.5"
   }
