--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write .",
     "lint": "eslint src/**/*.ts",
     "prebuild": "pnpm exec node ./scripts/prebuild.cjs",
-    "docs": "pnpm run prebuild && typedoc src/main.ts",
+    "docs": "pnpm run prebuild && typedoc src/index.ts",
     "all": "pnpm run prebuild && pnpm run format && pnpm run lint && pnpm run build"
   },
   "repository": {
