--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "types": "./dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsup src/index.ts && tsc --emitDeclarationOnly --declaration",
+    "build": "tsup src/index.ts --minify --dts",
     "check-fmt": "prettier --check .",
     "format": "prettier --write .",
     "lint": "eslint src/**/*.ts",
     "docs": "typedoc src/index.ts",
-    "all": "pnpm run format && pnpm run lint && pnpm run build"
+    "all": "rm -rf dist && pnpm run format && pnpm run lint && pnpm run build"
   },
   "repository": {
     "type": "git",
