--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     }
   },
   "rules": {
+    "camelcase": "error",
     "i18n-text/no-en": "off",
     "eslint-comments/no-use": "off",
     "import/extensions": [
@@ -38,7 +39,6 @@
     "@typescript-eslint/array-type": "error",
     "@typescript-eslint/await-thenable": "error",
     "@typescript-eslint/ban-ts-comment": "error",
-    "camelcase": "off",
     "@typescript-eslint/consistent-type-assertions": "error",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
