--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@actions/cache": "^3.2.4",
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
-    "got": "^14.2.1"
+    "got": "^14.2.1",
+    "ts-results": "^3.3.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
