--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
         run: nix develop --command pnpm run check-fmt
       - name: Lint
         run: nix develop --command pnpm run lint
+      - name: Run test suite
+        run: nix develop --command pnpm run test
       - name: Build
         run: nix develop --command pnpm run build
       - name: Check git status
