--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsup",
     "check-fmt": "prettier --check .",
     "format": "prettier --write .",
-    "lint": "eslint src/**/*.ts --ignore-pattern *.test.ts",
+    "lint": "eslint src/**/*.ts",
     "docs": "typedoc src/index.ts",
     "test": "vitest --watch false",
     "test-dev": "vitest",
