Fixup a couple missing awaits and check for them

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     }
   },
   "rules": {
+    "@typescript-eslint/no-base-to-string": "error",
     "camelcase": "error",
     "i18n-text/no-en": "off",
     "@typescript-eslint/no-shadow": "error",
