--- a/.github/workflows/update-downstream.yml
+++ b/.github/workflows/update-downstream.yml
@@ -24,12 +24,13 @@ jobs:
       GIT_EMAIL: ${{ github.actor }}@users.noreply.github.com
       TARGET_REPO: ${{ github.repository_owner }}/${{ matrix.repo }}
       SOURCE_REPO: ${{ github.repository }}
+      GITHUB_TOKEN: ${{ github.token }}
     steps:
       - name: Check out ${{ env.TARGET_REPO }}
         uses: actions/checkout@v4
         with:
           repository: ${{ env.TARGET_REPO }}
-          token: ${{ github.token }}
+          token: ${{ env.GITHUB_TOKEN }}
 
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
