--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@actions/cache": "^3.2.4",
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
-    "got": "^14.4.0"
+    "got": "^14.4.0",
+    "type-fest": "^4.19.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
