--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "check-fmt": "prettier --check .",
     "format": "prettier --write .",
     "lint": "eslint src/**/*.ts",
-    "docs": "typedoc --tsconfig ./tsconfig.typedoc.json src/index.ts",
+    "docs": "typedoc",
     "test": "vitest --watch false",
     "test-dev": "vitest",
     "all": "rm -rf dist && pnpm run format && pnpm run lint && pnpm run build"
