--- a/.github/workflows/update-downstream.yml
+++ b/.github/workflows/update-downstream.yml
@@ -58,6 +58,7 @@ jobs:
           gh repo fork
           git checkout -b ${{ env.GIT_BRANCH }}
 
+          date > boop
           git add .
 
           if [[ $(git status -s) ]]; then
