--- a/.github/workflows/update-downstream.yml
+++ b/.github/workflows/update-downstream.yml
@@ -63,7 +63,8 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.detsys_pr_bot_token }}
-          title: "Update detsys-ts dependency and dist directory (trigged by ${{ env.SOURCE_REPO }})"
+          title: "Update detsys-ts: ${{ github.event.head_commit.message }}"
+          commit-message: "Update detsys-ts for: ${{ github.event.head_commit.message }} (${{ env.REF }})"
           body: Bump detsys-ts to [${{ env.REF }}](${{ env.REF_URL }}) and regenerate application bundle.
           push-to-fork: detsys-pr-bot/${{ matrix.repo }}
           branch: "${{ env.GIT_BRANCH }}"
