--- a/.github/workflows/update-downstream.yml
+++ b/.github/workflows/update-downstream.yml
@@ -37,6 +37,18 @@ jobs:
       TARGET_REPO: ${{ github.repository_owner }}/${{ matrix.repo }}
       GH_TOKEN: ${{ secrets.detsys_pr_bot_token }} # for `gh pr create`
     steps:
+      - name: Check out detsys-ts
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ github.repository }}
+          token: ${{ env.GH_TOKEN }}
+
+      - name: Get last commit message
+        id: commit-msg
+        run: |
+          MSG=$(git show -s --format="%s" ${{ github.sha }}))
+          echo "msg=${MSG}" >> $GITHUB_OUTPUT
+
       - name: Check out ${{ env.TARGET_REPO }}
         uses: actions/checkout@v4
         with:
@@ -62,12 +74,6 @@ jobs:
         run: |
           nix develop --command pnpm update detsys-ts
           nix develop --command pnpm all
-
-      - name: Get last commit message
-        id: commit-msg
-        run: |
-          MSG=$(git show -s --format=%s)
-          echo "msg=${MSG}" >> $GITHUB_OUTPUT
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
