Provide working dirs for each checked-out repo

--- a/.github/workflows/update-downstream.yml
+++ b/.github/workflows/update-downstream.yml
@@ -40,11 +40,12 @@ jobs:
       - name: Check out detsys-ts
         uses: actions/checkout@v4
         with:
-          repository: ${{ github.repository }}
+          path: current
           token: ${{ env.GH_TOKEN }}
 
-      - name: Get last commit message
+      - name: Get last detsys-ts commit message
         id: commit-msg
+        working-directory: current
         run: |
           MSG=$(git show -s --format="%s" ${{ github.sha }}))
           echo "msg=${MSG}" >> $GITHUB_OUTPUT
@@ -52,6 +53,7 @@ jobs:
       - name: Check out ${{ env.TARGET_REPO }}
         uses: actions/checkout@v4
         with:
+          path: target
           repository: ${{ env.TARGET_REPO }}
           token: ${{ env.GH_TOKEN }}
 
@@ -62,15 +64,18 @@ jobs:
         uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: Configure Git for ${{ env.GIT_USER }}
+        working-directory: target
         run: |
           git config user.name "${{ env.GIT_USER }}"
           git config user.email "${{ env.GIT_EMAIL }}"
 
       - name: Make sure the repo is forked
+        working-directory: target
         run: |
           gh repo fork
 
       - name: Update `detsys-ts` dependency for ${{ env.TARGET_REPO }} to ref `${{ env.REF }}`
+        working-directory: target
         run: |
           nix develop --command pnpm update detsys-ts
           nix develop --command pnpm all
@@ -80,6 +85,7 @@ jobs:
         env:
           COMMIT_MSG: ${{ steps.commit-msg.outputs.msg }}
         with:
+          path: target
           token: ${{ secrets.detsys_pr_bot_token }}
           title: "Update `detsys-ts`: ${{ env.COMMIT_MSG }}"
           commit-message: "Update `detsys-ts` for: `${{ env.COMMIT_MSG }}` (`${{ env.REF }}`)"
