add flakehub-cache to the downstream actions list

--- a/.github/workflows/update-downstream.yml
+++ b/.github/workflows/update-downstream.yml
@@ -18,6 +18,7 @@ jobs:
         repo:
           - flake-checker-action
           - magic-nix-cache-action
+          - flakehub-cache-action
           - flakehub-push
           - flakehub-mirror
           - nix-installer-action
