--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "eslint-plugin-github": "^6.0.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "tsup": "^8.4.0",
     "typedoc": "^0.28.0",
     "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1",
     "vitest": "^3.0.9"
   }
 }
