--- a/package.json
+++ b/package.json
@@ -30,24 +30,13 @@
     "@actions/cache": "^4.0.3",
     "@actions/core": "^1.11.1",
     "@actions/exec": "^1.1.1",
-    "got": "^14.4.7",
-    "type-fest": "^4.41.0"
+    "got": "^14.4.7"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^22.15.17",
-    "@typescript-eslint/eslint-plugin": "^8.32.0",
-    "eslint": "^9.26.0",
-    "eslint-import-resolver-typescript": "^4.3.4",
-    "eslint-plugin-github": "^6.0.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.4.0",
-    "globals": "^16.1.0",
-    "prettier": "^3.5.3",
     "tsup": "^8.4.0",
     "typedoc": "^0.28.4",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.0",
     "vitest": "^3.1.3"
   }
 }
