Remove .direnv from explicit ignore array

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -3,7 +3,7 @@
   "vcs": { "enabled": true, "clientKind": "git", "useIgnoreFile": true },
   "files": {
     "ignoreUnknown": false,
-    "ignore": [".direnv", "dist"]
+    "ignore": ["dist"]
   },
   "formatter": {
     "enabled": true,
