--- a/tsconfig.typedoc.json
+++ b/tsconfig.typedoc.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "lib": ["ESNext"],
     "skipLibCheck": true
   },
   "exclude": ["src/**/*.test.ts"]
