--- a/.github/workflows/update-downstream.yml
+++ b/.github/workflows/update-downstream.yml
@@ -79,8 +79,13 @@ jobs:
       - name: Update `detsys-ts` dependency for ${{ env.TARGET_REPO }} to ref `${{ env.REF }}`
         working-directory: target
         run: |
-          nix develop --command pnpm update
-          nix develop --command pnpm all
+          if [ -f ./pnpm-lock.yaml ]; then
+            nix develop --command pnpm update
+            nix develop --command pnpm run all
+          else
+            nix develop --command npm update
+            nix develop --command npm run all
+          fi
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
