--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "docs": "typedoc",
     "test": "vitest --watch false",
     "test-dev": "vitest",
-    "all": "rm -rf dist && pnpm run format && pnpm run lint && pnpm run build"
+    "all": "rm -rf dist && npm run format && npm run lint && npm run build"
   },
   "repository": {
     "type": "git",
@@ -31,23 +31,23 @@
     "@actions/core": "^1.11.1",
     "@actions/exec": "^1.1.1",
     "got": "^14.6.5",
-    "type-fest": "^5.2.0"
+    "type-fest": "^5.3.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^6.0.0",
-    "@types/node": "^24.10.1",
-    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@types/node": "^24.10.2",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
     "eslint": "^9.39.1",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-github": "^6.0.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.5.0",
-    "prettier": "^3.7.3",
-    "tsdown": "^0.16.8",
+    "prettier": "^3.7.4",
+    "tsdown": "^0.17.2",
     "typedoc": "^0.28.15",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.48.0",
-    "vitest": "^4.0.14"
+    "typescript-eslint": "^8.49.0",
+    "vitest": "^4.0.15"
   }
 }
